# rust-aoc-2023

day1/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml  README.md
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/src/: main.rs  part1.rs
day8/src/: main.rs
day9/src/: main.rs
