[package]
name = "day5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.3"
futures = "0.3.29"
match_cast = "0.1.2"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "full"] }
tokio-scoped = "0.2.0"
